--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
